--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+altgraph==0.17.4
 filelock==3.16.1
 gitdb==4.0.11
 GitPython==3.1.43
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.15
-PyQt5_sip==12.15.0
+packaging==24.2
+pefile==2023.2.7
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2024.10
 python-dotenv==1.0.1
+pywin32==308
+pywin32-ctypes==0.2.3
 smmap==5.0.1
 watchdog==6.0.0
